--- a/app/views/talk/_help_talk_name_of_speaker.html.erb
+++ b/app/views/talk/_help_talk_name_of_speaker.html.erb
@@ -3,7 +3,7 @@
 <p>Please write the name and affiliation of the speaker as you would like it to appear.	If you do not know it at this stage, please leave it as "<%= update_field @prefix+'name_of_speaker','Speaker to be confirmed' %>". As you start typing I will make some suggestions below. Click on a suggestion to enter their details.</p>
 
 <% if User.current %>
-<%= my_observe_field '#'+@prefix+'name_of_speaker', :update => '#speakers', :url => "'%s?search='+value+'&prefix=%s'"%[talk_path(:action => 'speaker_name_list'), @prefix] %>
+<%= my_observe_field '#'+@prefix+'name_of_speaker', :update => '#speakers', :url => "'%s&search='+value"%talk_path(:action => 'speaker_name_list', :prefix => @prefix) %>
 <% end %>
 <ul>
 <div id='speakers'>
