--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,6 +4,9 @@
 <%= javascripts %>
 <%= csrf_meta_tag %>
 <%= stylesheets %>
+<!--[if gte IE 9]><!-->
+<%= stylesheet_link_tag 'effect2.css' %>
+<!--<![endif]-->
 <%= stylesheet_link_tag lists_styles_path(:action => 'lists', :update => @styles_last_update) %>
 <%= stylesheet_link_tag 'talks-print', :media => 'print' %>
 <meta http-equiv="content-type" content="text-html; charset=utf-8"/>
