--- a/app/assets/stylesheets/talks-screen.css
+++ b/app/assets/stylesheets/talks-screen.css
@@ -1,5 +1,5 @@
 .sidebox a.btn { text-align: left; }
-.sidebox a { display: block; }
+.sidebox div.related a { display: block; }
 .sidebox #talks-calendar .ui-datepicker {
     background: none;
 }
