--- a/app/views/talk/_related.html.erb
+++ b/app/views/talk/_related.html.erb
@@ -1,21 +1,23 @@
 <h1>Other lists</h1>
 
 <% unless @talk.related_lists.empty? %>
-
+<div class='related'>
 	<% for related_list in @talk.related_lists %>
 	<% next if related_list.list.ex_directory? %>
 		<%= link_list related_list.list %>
 	<% end %>
-
+</div>
 <% else %>
 	<p>This will be updated at midnight.</p>
 <% end %>
 
 <h2>Other talks</h2>
 
+<div class='related'>
 <% for related_talk in @talk.related_talks %>
 	<% next if related_talk.talk.ex_directory? %>
 	<%= link_talk related_talk.talk %>
 <% end %>
+</div>
 
 <script type='text/javascript' src='<%= @cal_path %>'></script>
