Added links to lists that each talk belongs to in week format.

--- a/app/assets/stylesheets/talks-screen.css
+++ b/app/assets/stylesheets/talks-screen.css
@@ -1,3 +1,6 @@
+#week .day a[rel='tooltip']:hover {
+    text-decoration: none;
+}
 .sidebox a.btn { text-align: left; }
 .sidebox div.related a { display: block; }
 .sidebox #talks-calendar .ui-datepicker {
