--- a/app/views/show/week.html.erb
+++ b/app/views/show/week.html.erb
@@ -13,3 +13,10 @@
 <% end %>
 </table></div>
 </div>
+<script>
+(function($){
+    $(document).ready(function() {
+$("[rel=tooltip]").tooltip();
+});
+})(jQuery);
+</script>
