--- a/app/views/shared/_navigationbar.html.erb
+++ b/app/views/shared/_navigationbar.html.erb
@@ -1,5 +1,5 @@
 <!-- header -->
-<div class="navbar">
+<div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
       <ul class="nav">
