--- a/app/views/show/_list_details.html.erb
+++ b/app/views/show/_list_details.html.erb
@@ -7,8 +7,8 @@
 
 <div class="btn-toolbar">
 <div class="btn-group">
-<%= upcoming_link %>
-<%= archive_link %>
+<%= upcoming_link(@today) %>
+<%= archive_link(@today) %>
 </div>
 <div class="btn-group">
 <%= icon_button 'icon-check', *add_list_to_list_contents %>
