Use form_oberver and json response.

--- a/app/views/list_list/create.html.erb
+++ b/app/views/list_list/create.html.erb
@@ -1,7 +1,8 @@
 <h1>Which lists would you like to include &#145;<%= @child.name %>&#146;?</h1>
 
 <p>Please check all the lists that you wish &#145;<%= @child.name %>&#146; to be part of, and click update</p>
-<%= form_tag include_list_url(:action => 'create', :child => @child.id  ) %>
+<div id='notify'></div>
+<%= form_tag '#', :id => 'include-list-form', :rel => 'observe', :data => {:target => '#notify', :'observer-url' => include_list_url(:action => 'create', :format => :json, :child => @child.id  )} %>
 <table>
 	<% for list in @lists.sort_by { |list| list.name } %>
 	<tr>
@@ -13,7 +14,6 @@
 	<td><%= label "add_to_list", list.id, list.name %></td></tr>
 	<% end %>
 </table>
-<%= submit_tag 'Update' %> or <%= link_to 'Cancel', list_url(:id => @child ) %>
 </form>
 
 <h2>New List</h2>
@@ -22,3 +22,9 @@
 <div id='lists'>
 <%= render :partial => 'list/add_list' %>
 </div>
+
+<script>
+(function($) {
+$('#include-list-form').talks('observe_form');
+})(jQuery);
+</script>
