Show tell a friend button only for logged in users.

--- a/app/views/show/_list_details.html.erb
+++ b/app/views/show/_list_details.html.erb
@@ -13,7 +13,9 @@
 <div class="btn-group">
 <%= add_list_to_list_button %>
 <%= icon_button 'icon-calendar', 'Subscribe using ical/vcal', list_url(:id => @list, :format => :ics, :protocol => 'webcal://') %>
+<% if User.current %>
 <%= icon_button 'icon-envelope', 'Tell a friend', tell_a_friend_path('tickle[about_id]' => @list.id, 'tickle[about_type]' => 'List'), :data => { :id => 'tell_a_friend'}, :rel => 'talks-modal' %>
+<% end %>
 </div>
 <% if User.current %>
 <div class="btn-group">
