--- a/app/views/list_talk/create.html.erb
+++ b/app/views/list_talk/create.html.erb
@@ -1,17 +1,10 @@
 <h1>Which lists would you like to include &#145;<%= @child.name %>&#146;?</h1>
 
 <p>Please check all the lists that you wish &#145;<%= @child.name %>&#146; to be part of, and click update</p>
-<%= form_tag :action => 'create', :child => @child  %>
-<table>
-	<% for list in @lists.sort_by { |list| list.name } %>
-	<tr>
-		<td>
-			<%= check_box "add_to_list", list.id, { :checked => list.talks.direct.include?(@child) }, 'add', 'remove' %>
-		</td>
-	<td><%= label "add_to_list", list.id, list.name %></td></tr>
-	<% end %>
-</table>
-<%= submit_tag 'Update' %> or <%= link_to 'Cancel', talk_url(:id => @child ) %>
+<%= form_tag '#', :id => 'include-talk-form', :data => {:target => '#include-talk-contents', :'observer-url' => include_talk_url(:action => 'create', :child => @child)}  %>
+<div id='include-talk-contents'>
+<%= render :partial => 'lists' %>
+</div>
 </form>
 
 <h2>New List</h2>
