--- a/app/views/talk/index.html.erb
+++ b/app/views/talk/index.html.erb
@@ -1,33 +1,17 @@
 <div class='talk effect2 list<%= @talk.series.id %>'>
+  <%= render :partial => 'button_toolbar' %>
 	<%= logo(@talk, :medium) %>
 	<h1 class='summary'><%= @talk.title %></h1>
-	<%= link_to_if @talk.speaker, @talk.name_of_speaker, { :controller => "user", :action => "show", :id => @talk.speaker  } %>		
-	<div class="btn-toolbar">
-	  <div class="btn-group">
-	    <%= add_talk_to_list_button %>
-	    <%= vcal_button %>
-	    <%= text_button %>
-	    <% if User.current %>
-	    <%= tell_a_friend_button %>
-	    <% end %>
-	    <%= contact_organizer_button %>
-	  </div>
-	  <% if @talk.editable? %>
-	  <div class="btn-group">
-	    <%= link_to 'Edit this talk', {:controller => "talk", :action => "edit", :id => @talk}, :class => 'btn' %>
-	    <%= link_to 'Delete this talk', {:controller => 'talk', :action => 'delete', :id => @talk}, :class => 'btn' %>
-	  </div>
-	  <% end %>
-	</div>
 	<ul class='details'>
-		<li><%= image_tag 'clock.jpg' %><%= format_time_of_talk @talk, true %></li>
-		<li><%= image_tag 'house.jpg' %><%= link_list @talk.venue %>.</li>
+	  <li>	<%= link_to_if @talk.speaker, @talk.name_of_speaker, { :controller => "user", :action => "show", :id => @talk.speaker  } %></li>
+	  <li><%= format_time_of_talk @talk, true %></li>
+	  <li><%= link_list @talk.venue %></li>
 	</ul>
 		
 		<% if @talk.special_message %>
 			<p class='urgent'><%= @talk.special_message %></p>
 		<% end %>
-
+	
 		<%= @talk.abstract_filtered.html_safe %>
 		
 		<p>This talk is part of the <%= link_list @talk.series %> series.</p>		
