--- a/app/views/talk/_button_toolbar.html.erb
+++ b/app/views/talk/_button_toolbar.html.erb
@@ -9,8 +9,9 @@
   <div class="btn-group">
     <%= link_to icon_tag('icon-cog'), '#', :class => "btn dropdown-toggle", :data => { :toggle => "dropdown"} %>
     <ul class="dropdown-menu">
-      <li><%= link_to icon_tag('icon-pencil')+'Edit this talk', {:controller => "talk", :action => "edit", :id => @talk} %></li>
-      <li><%= link_to icon_tag('icon-wrench')+'Delete this talk', {:controller => 'talk', :action => 'delete', :id => @talk} %></li>
+      <li><%= icon_link 'icon-pencil','Edit this talk', {:controller => "talk", :action => "edit", :id => @talk} %></li>
+      <li><%= text_button %></li>
+      <li><%= icon_link 'icon-trash','Delete this talk', {:controller => 'talk', :action => 'delete', :id => @talk} %></li>
     </ul>
   </div>
   <% end %>
