Use email_field.

--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -14,7 +14,7 @@
 	<p>If you are organizing seminars, please use the form below to sign up!</p>
 	<table>
 	<tr><td>E-mail address:</td>
-	<td><%= user.text_field :email %> </td></tr>
+	<td><%= user.email_field :email %> </td></tr>
 	<tr><td>Password</td>
 	<td><%= password_field :user, :password, :value => '' %></td></tr>
 	<tr><td>Password confirmation</td>
