--- a/app/views/talk/_button_toolbar.html.erb
+++ b/app/views/talk/_button_toolbar.html.erb
@@ -9,9 +9,10 @@
   <div class="btn-group">
     <%= link_to icon_tag('icon-cog'), '#', :class => "btn dropdown-toggle", :data => { :toggle => "dropdown"} %>
     <ul class="dropdown-menu">
-      <li><%= icon_link 'icon-pencil','Edit this talk', {:controller => "talk", :action => "edit", :id => @talk} %></li>
+      <li><%= icon_link 'icon-pencil','Edit this talk', talk_path(:action => "edit", :id => @talk) %></li>
+      <li><%= icon_link 'icon-pencil', 'Add a special message', talk_path(:action => 'edit_special_message', :id => @talk), :rel => 'talks-modal' %></li>
       <li><%= text_button %></li>
-      <li><%= icon_link 'icon-trash','Delete this talk', {:controller => 'talk', :action => 'delete', :id => @talk} %></li>
+      <li><%= icon_link 'icon-trash','Delete this talk', talk_path(:action => 'delete', :id => @talk) %></li>
     </ul>
   </div>
   <% end %>
