--- a/app/views/talks/_button_toolbar.html.erb
+++ b/app/views/talks/_button_toolbar.html.erb
@@ -10,7 +10,7 @@
     <%= link_to icon_tag('icon-cog'), '#', :class => "btn dropdown-toggle", :data => { :toggle => "dropdown"} %>
     <ul class="dropdown-menu">
       <li><%= icon_link 'icon-pencil','Edit this talk', edit_talk_path(@talk) %></li>
-      <li><%= icon_link 'icon-pencil', 'Add a special message', talk_path(:action => 'edit_special_message', :id => @talk), :rel => 'talks-modal' %></li>
+      <li><%= icon_link 'icon-plus', 'Add a special message', edit_talks_special_message_path(@talk), :rel => 'talks-modal' %></li>
       <li><%= text_button %></li>
       <li><%= icon_link 'icon-trash','Delete this talk', delete_talk_path(@talk), :rel => 'talks-modal' %></li>
     </ul>
