Talks#cancel uses special_messages/update.

--- a/app/views/talks/delete.html.erb
+++ b/app/views/talks/delete.html.erb
@@ -4,5 +4,5 @@
 
 <p><%= link_to 'Delete', @talk, :method => :delete, :class => "btn" %> (This cannot be undone.)</p>
 or
-<p><%= link_to 'Cancel', cancel_talk_path(@talk), :method => :post, :class => "btn" %> so that people can see that it was canceled when they access the url.</p>
+<p><%= link_to 'Cancel', cancel_talk_path(@talk), :method => :post, :remote => true, :class => "btn" %> so that people can see that it was canceled when they access the url.</p>
 
