--- a/app/views/list/_add_list.html.erb
+++ b/app/views/list/_add_list.html.erb
@@ -1,5 +1,4 @@
-<%= form_for(:list, :url => list_details_url(:action => 'create', :return_to => request.url) ) do |f| %>
-	<%= f.text_field :name, :size => '30' %>
+<%= form_for(:list, :url => list_details_url(:action => 'create', :updateurl => update), :remote => true ) do |f| %>
+	<%= f.text_field :name, :size => '30', :placeholder => 'Type the title of a new list here' %>
 	<%= submit_tag 'Create' %>
-	<script>Behaviour.register(add_list_rules);</script>
 <% end %>
