--- a/app/views/associations/edit.html.erb
+++ b/app/views/associations/edit.html.erb
@@ -2,11 +2,11 @@
 
 <p>All talks in these lists are included by <%= @list.name %>; to add other lists or talks here, go to them and select 'Add to my list(s)'</p>
 <ul>
-	<% for list_list in @list_lists %>
-	<li><%= link_list list_list.child %> <%= link_to '(remove)', include_list_url(:id => list_list.id, :action => :destroy, :return_to_edit => '1') %></li>
+	<% for link in @links %>
+	<li><%= link_list link.child %> <%= link_to '(remove)', include_path(:id => link.id, :type => link.child.class.to_s.downcase, :action => :destroy, :return_to_edit => '1') %></li>
 	<% end %>
 </ul>
-<% if @list_lists.empty? %>
+<% if @links.empty? %>
 <p>(none)</p>
 <% end %>
 
