Changed routes around lists, list_users (managers), and include_*.

--- a/app/views/associations/new.html.erb
+++ b/app/views/associations/new.html.erb
@@ -11,6 +11,6 @@
 
 <p>If you like, you can create a new list:</p>
 <div id='lists'>
-<%= render :partial => 'list/add_list', :locals => {:update => @updateurl}%>
+<%= render :partial => 'lists/add_list', :locals => {:update => @updateurl}%>
 </div>
 
