--- a/app/views/associations/edit.html.erb
+++ b/app/views/associations/edit.html.erb
@@ -1,13 +1,11 @@
 <h1><%= @childtype.pluralize.capitalize %> included in <%= link_list(@list) %></h1>
 
 <p>All <%= "talks in " if @childtype=='list' %> these <%= @childtype.pluralize %> are included by <%= @list.name %>; to add other lists or talks here, go to them and select 'Add to my list(s)'</p>
-<ul>
-	<% for link in @links %>
-	<li><%= link_list link.child %> <%= link_to '(remove)', include_path(:id => link.id, :type => link.child.class.to_s.downcase, :action => :destroy, :return_to_edit => '1') %></li>
-	<% end %>
+<ul id="children">
+<%= render :partial => 'links' %>
 </ul>
 <% if @links.empty? %>
 <p>(none)</p>
 <% end %>
 
-<p><%= link_to "Return to edit menu", list_details_url(:action => 'edit', :id => @list.id) %>.</p>
+<p><%= link_to "Return to edit menu", edit_list_path(@list) %>.</p>
