--- a/app/views/shared/_navigationbar.html.erb
+++ b/app/views/shared/_navigationbar.html.erb
@@ -42,7 +42,7 @@
       <div class="nav-collapse">
         <ul class="nav">
 	  <% if User.current %>
-	  <li><%= link_to content_tag(:i,'',:class => 'icon-plus-sign')+'new list', list_details_url(:action => 'new') %></li>
+	  <li><%= link_to content_tag(:i,'',:class => 'icon-plus-sign')+'new list', new_list_path %></li>
 	  <li class="dropdown">
 	    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
 	      <%= content_tag(:i,'',:class => 'icon-plus-sign')+'new talk' %>
