--- a/app/views/show/_list_details.html.erb
+++ b/app/views/show/_list_details.html.erb
@@ -1,6 +1,6 @@
 
 <div class='listdetail'>
-	<%= link_to logo(@list, :medium), list_details_url( :id => @list ) %>
+	<%= link_to logo(@list, :medium), list_path( @list ) %>
 <h1><%= link_list @list %></h1>
 
 <%= @list.details_filtered ? @list.details_filtered.html_safe : nil %>
@@ -12,7 +12,7 @@
 </div>
 <div class="btn-group">
 <%= add_list_to_list_button %>
-<%= icon_button 'icon-calendar', 'Subscribe using ical/vcal', list_url(:id => @list, :format => :ics, :protocol => 'webcal://') %>
+<%= icon_button 'icon-calendar', 'Subscribe using ical/vcal', list_url(:id => @list, :format => :ics, :protocol => 'webcal') %>
 <% if User.current %>
 <%= icon_button 'icon-envelope', 'Tell a friend', new_tickle_path('tickle[about_id]' => @list.id, 'tickle[about_type]' => 'List'), :rel => 'talks-modal' %>
 <% end %>
@@ -25,12 +25,12 @@
  <%= link_to icon_tag('icon-cog'), '#', :class => "btn dropdown-toggle", :data => { :toggle => "dropdown"} %>
   <ul class="dropdown-menu">
     <% if @list.editable? %>
-    <li><%= link_to icon_tag('icon-pencil')+'Edit this list', list_details_url( :id => @list, :action => "edit" ) %></li>
-    <li><%= link_to icon_tag('icon-circle-arrow-left')+'Show a link to submit a talk', list_details_path(:action => 'show_talk_post_url', :id => @list.id), :rel => 'talks-modal' %></li>
+    <li><%= link_to icon_tag('icon-pencil')+'Edit this list', edit_list_path( @list, :action => "edit" ) %></li>
+    <li><%= link_to icon_tag('icon-circle-arrow-left')+'Show a link to submit a talk', show_talk_post_url_list_path(@list), :rel => 'talks-modal' %></li>
     <% end %>
     <li><%= subscribe_by_email_link %></li>
     <li><%= link_to icon_tag('icon-wrench')+'Create custom view', custom_view_path(:action => 'index', :list => @list) %></li>
-    <li><%= link_to icon_tag('icon-cog')+'Further detail', list_details_url( :id => @list ) %></li>
+    <li><%= link_to icon_tag('icon-cog')+'Further detail', details_list_path( @list ) %></li>
   </ul>
 </div>
 <% end %>
