--- a/app/views/shared/_navigationbar.html.erb
+++ b/app/views/shared/_navigationbar.html.erb
@@ -59,6 +59,7 @@
 	  <% end %>
 	  <li><%= form_tag( { :controller => 'search', :action => 'results' }, {:id => 'smallsearch', :class => "navbar-search pull-left"} )  do %>
 	    <%= text_field_tag 'search', '', :class => "search-query", :placeholder => "Search" %>
+	    <%= submit_tag 'Go', :class => 'hide' %>
 	    <% end %></li>
        </ul>
 	
