--- a/app/assets/stylesheets/talks-screen.css
+++ b/app/assets/stylesheets/talks-screen.css
@@ -287,7 +287,7 @@ div.table td.special { padding: 1em 0.5em 0em 0.5em;}
 div.table td.special_message { text-align: center; font-weight: bold; padding: 0em 0.5em 1em 0.5em; }
 
 div.simplewithlogo h2 { font-size: 1em; font-weight: normal; margin: 2em 0 0 0;	border-bottom: none;}
-div.simplewithlogo div.talk { padding: 0.2em 0 0.2em 0; }
+div.simplewithlogo div.talk { background-color: #fff; padding: 0.2em 0 0.2em 0; }
 div.simplewithlogo div.talk h3 { font-size: 1em; font-weight: bold; margin: 0 0 0 40px; }
 div.simplewithlogo div.talk p { margin: 0 0 0 40px; }
 div.simplewithlogo div.talk img.logo { float: left; }
