Added .collapse to div.nav-collapse

--- a/app/views/shared/_navigationbar.html.erb
+++ b/app/views/shared/_navigationbar.html.erb
@@ -12,7 +12,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <div class="nav-collapse">
+      <div class="nav-collapse collapse">
         <ul class="nav">
 	  <% if User.current %>
 	  <li><%= link_to content_tag(:i,'',:class => 'icon-plus-sign')+'new list', new_list_path %></li>
