--- a/app/assets/stylesheets/talks.css
+++ b/app/assets/stylesheets/talks.css
@@ -383,3 +383,7 @@ div#tellafriend form {
     display: none;
 }
 
+@media print {
+    div.navbar, div.sidebox, footer.footer, ul.breadcrumb, div.btn-toolbar, div.toolbar, div.related { display: none; }
+    a[href]:after{content:"";}
+}
