--- a/app/assets/stylesheets/talks.css
+++ b/app/assets/stylesheets/talks.css
@@ -307,8 +307,15 @@ div.oneday a { text-decoration:none; color: #000;}
 div.oneday a:visited { text-decoration:none; color: #000;}
 div.oneday a:hover 	{ text-decoration:underline; color: #003399;}
 
-div.day td.date { width: 5em; }
+div.day td.date { width: 7em; }
 div.day td span.divider {padding:0 5px;color:#ccc;}
+div.day td h3, div.day td p {
+    margin-bottom: 2px;
+}
+
+div.day td {
+    padding-bottom: 10px;
+}
 
 .fieldWithErrors {
   padding: 2px;
@@ -384,6 +391,9 @@ div#tellafriend form {
 }
 
 @media print {
-    div.navbar, div.sidebox, footer.footer, ul.breadcrumb, div.btn-toolbar, div.toolbar, div.related { display: none; }
+    div.navbar, div.sidebox, footer.footer, ul.breadcrumb, div.btn-toolbar, div.toolbar, div.related, span.related { display: none; }
+    a,a:visited{text-decoration:none; }
+    p>a { border-bottom:0px; }
     a[href]:after{content:"";}
+    
 }
